--- a/package.json
+++ b/package.json
@@ -2,19 +2,25 @@
   "name": "grinchs-code",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://kbuczynski.github.io/grinchs-code",
   "dependencies": {
+    "gh-pages": "^2.1.1",
     "node-sass": "^4.13.0",
     "react": "^16.11.0",
+    "react-countdown-now": "^2.1.1",
     "react-dom": "^16.11.0",
     "react-flip-numbers": "^3.0.4",
     "react-scripts": "3.2.0",
-    "react-scroll": "^1.7.14"
+    "react-scroll": "^1.7.14",
+    "react-time-line": "^0.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
