--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "gh-pages": "^2.1.1",
     "node-sass": "^4.13.0",
     "react": "^16.11.0",
+    "react-burger-menu": "^2.6.11",
     "react-countdown-now": "^2.1.1",
     "react-dom": "^16.11.0",
     "react-flip-numbers": "^3.0.4",
